Increase DevTools SystemInfoGPU timeout for Windows.

Before this CL, DevTools would crash the browser if it did not get a response in
5 seconds. This timeout is too low for Windows. On Catapult perf tests on
Windows, it takes ~3 seconds for the GPU process to respond on average, and
sometimes it takes more than 5 seconds.

Bug: 873112
Change-Id: I67ee82a1a75df0ba9e1b483a58c66c56a8bf2213
Reviewed-on: https://chromium-review.googlesource.com/1170584
Reviewed-by: Kenneth Russell <kbr@chromium.org>
Reviewed-by: Andrey Kosyakov <caseq@chromium.org>
Commit-Queue: Erik Chen <erikchen@chromium.org>
Cr-Commit-Position: refs/heads/master@{#582375}
Former-commit-id: 1c9cf51bc70b424ce8d9849d24c115a7f6930772